--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=511ea051f27437f2b898",
+    "/css/app.css": "/css/app.css?id=8582fab7eb411b0cc65d"
 }
